# ros2_openface

./: .gitignore  CHANGELOG.md  LICENSE  README.md
ros2_openface/: CMakeLists.txt  package.xml
ros2_openface/config/: openface.yaml  openface_separate.yaml
ros2_openface/launch/: openface.launch.py  openface_separate.launch.py
ros2_openface/src/: openface.cpp  openface_separate.cpp
ros2_openface_msgs/: CMakeLists.txt  package.xml
ros2_openface_msgs/msg/: ActionUnit.msg  ActionUnitsStamped.msg  Face.msg  FaceStamped.msg  Pixel.msg  PixelsStamped.msg  PointsStamped.msg
scripts/: install_dlib_9_13.bash  install_opencv_4_1_2.bash  install_ros2_distro_eloquent.bash  install_ros2_openface.bash
